--- a/.gitattributes
+++ b/.gitattributes
@@ -11,7 +11,8 @@
 # Note: This is only used by command line
 ###############################################################################
 #*.cs     diff=csharp
-
+* linguist-vendored
+*.js linguist-vendored=false
 ###############################################################################
 # Set the merge driver for project and solution files
 #
