--- a/.gitattributes
+++ b/.gitattributes
@@ -12,7 +12,7 @@
 ###############################################################################
 #*.cs     diff=csharp
 * linguist-vendored
-*.js linguist-vendored=false
+*.cs linguist-vendored=false
 ###############################################################################
 # Set the merge driver for project and solution files
 #
